	from scratch because the previous one was too buggy. Now single
	click navigation works correctly, also keyboard usage is improved
	a little bit;
	* app/envelope-box.c, app/gui.[ch], app/instrument-editor.c,
	app/menubar.[ch], app/sample-editor.c: files were modified mainly
	to be consistend with the above changes;
	* app/gui-subs.[ch]: One function is moved here from gui.[ch];
	* app/tracer.c: Possible memory violation is fixed.

2018-07-19  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.[ch], app/instrument-editor.c, app/sample-editor.c,
	app/drivers/file-output.c, app/st-subs.c, app/xm.[ch]: fixed double
	sample name setting + code optimization.

2018-07-16  Yury Aliaev  <mutab0r@rambler.ru>
	* app/audio.c, app/audioconfig.c, app/gui.c, app/main.c,
	app/menubar.c, app/sample-editor.c, app/drivers/file-output.c,
	configure.in: The version of the audiofile library is now being
	determined in the compilation time without runtime hacks;
	* app/sample-editor.c: Bugfix (double file closing).

2018-06-29  Yury Aliaev  <mutab0r@rambler.ru>
	* app/sample-editor.c: Better fiddling with sounds in sample editor.
	* app/keys.c, app/track-editor.c: The keyboard control for channels'
	muting/unmuting is made simplier, some more default keybindings are
	added.

2018-06-28  Yury Aliaev  <mutab0r@rambler.ru>
	* app/file-operations.c, app/instrument-editor.c, app/module-info.c,
	app/track-editor.[ch]: Polyphonic try mode is now also available at
	the file, instrument editor and module info pages.

2018-06-26  Yury Aliaev  <mutab0r@rambler.ru>
	* app/audio.c, app/gui-settings.[ch], app/gui.[ch], app/midi-09x.c,
	app/track-editor.c, app/xm-player.[ch]: Polyphonic playing in try
	(out of editing) mode (optional).

2018-06-25  Yury Aliaev  <mutab0r@rambler.ru>
	* app/track-editor.c, app/xm-player.c: When out of editing mode,
	note keys' pressing produces sounds independent on the cursor
	position (note/instr/eff column, muted channel).

2018-06-18  Yury Aliaev  <mutab0r@rambler.ru>